# rust-portaudio

./: .gitignore  .gitmodules  Cargo.toml
examples/: blocking.rs
rust-portaudio-sys/: Cargo.toml  build.rs
src/: error.rs  lib.rs  stream.rs  types.rs
