[package]
name = "portaudio"
version = "0.7.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>",
           "Mitchell Nordine <mitchell.nordine@gmail.com>"]
description = "PortAudio bindings for Rust."
license = "MIT"
homepage = "https://github.com/RustAudio/rust-portaudio"
repository = "https://github.com/RustAudio/rust-portaudio.git"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
libc = "0.2.104"
num = "0.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
portaudio_sys = { path = "./rust-portaudio-sys", version = "0.1.0" }
thiserror = "1.0.30"
